--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-restplus = "*"
 flask-restful = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+flask-login = "*"
 
 [requires]
 python_version = "3.7"
